objects/ResourceAbsence.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SDO_Service_WEM_Assigned_to_me__c</fullName>
        <description>*What*: Used to indicate if absence is assigned to user.  *Who*: Gregory Johnson. *When*: June 2022</description>
        <formula>Resource.RelatedRecordId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_WEM_In_the_Past__c</fullName>
        <description>*What*: Used to indicate if absence is in the past.  *Who*: Gregory Johnson. *When*: June 2022</description>
        <formula>End &lt; Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In the past?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Master_Data</fullName>
        <active>false</active>
        <errorConditionFormula>SDO_Tool_FSLDemoTools_Master_Data__c</errorConditionFormula>
        <errorMessage>Can&apos;t edit FSLDemoTools Master Data</errorMessage>
    </validationRules>
</CustomObject>